--- a/simulacion_salud_eventos_discretos.ipynb
+++ b/simulacion_salud_eventos_discretos.ipynb
@@ -28,7 +28,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QfjfkUu-ClP3",
-        "outputId": "629626ba-6a83-4c0d-e7f0-0165d770912b"
+        "outputId": "c711ce59-03ad-4d97-e25d-67ac729a5b8b"
       },
       "outputs": [
         {
@@ -49,79 +49,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "04yHHP_mClP5",
-        "outputId": "98424e61-5645-4bf8-bb9f-5bfefae166cb"
+        "outputId": "24db221f-ec60-4047-c90e-ea0db2256534"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tiempo promedio de espera: 39.09 minutos\n",
-            "Utilización del médico: 99.68%\n",
-            "Tiempo promedio de espera: 41.29 minutos\n",
-            "Utilización del médico: 98.45%\n",
-            "Tiempo promedio de espera: 34.48 minutos\n",
-            "Utilización del médico: 99.02%\n",
-            "Tiempo promedio de espera: 34.02 minutos\n",
-            "Utilización del médico: 99.39%\n",
-            "Tiempo promedio de espera: 35.52 minutos\n",
-            "Utilización del médico: 98.89%\n",
-            "Tiempo promedio de espera: 50.82 minutos\n",
-            "Utilización del médico: 98.73%\n",
-            "Tiempo promedio de espera: 32.47 minutos\n",
-            "Utilización del médico: 99.89%\n",
-            "Tiempo promedio de espera: 36.67 minutos\n",
-            "Utilización del médico: 98.65%\n",
-            "Tiempo promedio de espera: 39.35 minutos\n",
-            "Utilización del médico: 97.90%\n",
-            "Tiempo promedio de espera: 46.40 minutos\n",
-            "Utilización del médico: 100.20%\n",
-            "Tiempo promedio de espera: 30.89 minutos\n",
-            "Utilización del médico: 99.89%\n",
-            "Tiempo promedio de espera: 27.65 minutos\n",
-            "Utilización del médico: 99.55%\n",
-            "Tiempo promedio de espera: 40.54 minutos\n",
-            "Utilización del médico: 98.05%\n",
-            "Tiempo promedio de espera: 36.78 minutos\n",
-            "Utilización del médico: 99.76%\n",
-            "Tiempo promedio de espera: 35.19 minutos\n",
-            "Utilización del médico: 100.30%\n",
-            "Tiempo promedio de espera: 24.46 minutos\n",
-            "Utilización del médico: 99.62%\n",
-            "Tiempo promedio de espera: 34.54 minutos\n",
-            "Utilización del médico: 99.52%\n",
-            "Tiempo promedio de espera: 45.40 minutos\n",
-            "Utilización del médico: 98.21%\n",
-            "Tiempo promedio de espera: 36.95 minutos\n",
-            "Utilización del médico: 99.18%\n",
-            "Tiempo promedio de espera: 44.56 minutos\n",
-            "Utilización del médico: 98.58%\n",
-            "Tiempo promedio de espera: 27.13 minutos\n",
-            "Utilización del médico: 99.46%\n",
-            "Tiempo promedio de espera: 45.62 minutos\n",
-            "Utilización del médico: 98.65%\n",
-            "Tiempo promedio de espera: 32.03 minutos\n",
-            "Utilización del médico: 100.57%\n",
-            "Tiempo promedio de espera: 43.02 minutos\n",
-            "Utilización del médico: 99.97%\n",
-            "Tiempo promedio de espera: 31.57 minutos\n",
+            "Tiempo promedio de espera: 26.99 minutos\n",
+            "Utilización del médico: 97.95%\n",
+            "Tiempo promedio de espera: 40.87 minutos\n",
+            "Utilización del médico: 99.14%\n",
+            "Tiempo promedio de espera: 32.65 minutos\n",
+            "Utilización del médico: 100.15%\n",
+            "Tiempo promedio de espera: 38.39 minutos\n",
+            "Utilización del médico: 98.64%\n",
+            "Tiempo promedio de espera: 33.33 minutos\n",
+            "Utilización del médico: 99.20%\n",
+            "Tiempo promedio de espera: 31.37 minutos\n",
+            "Utilización del médico: 99.06%\n",
+            "Tiempo promedio de espera: 44.41 minutos\n",
+            "Utilización del médico: 98.88%\n",
+            "Tiempo promedio de espera: 36.12 minutos\n",
             "Utilización del médico: 99.24%\n",
-            "Tiempo promedio de espera: 56.29 minutos\n",
-            "Utilización del médico: 99.18%\n",
-            "Tiempo promedio de espera: 43.61 minutos\n",
-            "Utilización del médico: 99.10%\n",
-            "Tiempo promedio de espera: 45.13 minutos\n",
-            "Utilización del médico: 99.28%\n",
-            "Tiempo promedio de espera: 37.72 minutos\n",
-            "Utilización del médico: 100.10%\n",
-            "Tiempo promedio de espera: 37.68 minutos\n",
-            "Utilización del médico: 98.86%\n"
+            "Tiempo promedio de espera: 35.41 minutos\n",
+            "Utilización del médico: 99.82%\n",
+            "Tiempo promedio de espera: 22.13 minutos\n",
+            "Utilización del médico: 99.87%\n",
+            "Tiempo promedio de espera: 44.64 minutos\n",
+            "Utilización del médico: 98.34%\n",
+            "Tiempo promedio de espera: 33.31 minutos\n",
+            "Utilización del médico: 100.00%\n",
+            "Tiempo promedio de espera: 34.46 minutos\n",
+            "Utilización del médico: 99.97%\n",
+            "Tiempo promedio de espera: 30.55 minutos\n",
+            "Utilización del médico: 99.36%\n",
+            "Tiempo promedio de espera: 29.83 minutos\n",
+            "Utilización del médico: 99.79%\n",
+            "Tiempo promedio de espera: 46.18 minutos\n",
+            "Utilización del médico: 100.73%\n",
+            "Tiempo promedio de espera: 27.58 minutos\n",
+            "Utilización del médico: 98.67%\n",
+            "Tiempo promedio de espera: 46.44 minutos\n",
+            "Utilización del médico: 99.24%\n",
+            "Tiempo promedio de espera: 25.51 minutos\n",
+            "Utilización del médico: 98.85%\n",
+            "Tiempo promedio de espera: 36.19 minutos\n",
+            "Utilización del médico: 99.55%\n",
+            "Tiempo promedio de espera: 38.43 minutos\n",
+            "Utilización del médico: 98.14%\n",
+            "Tiempo promedio de espera: 44.65 minutos\n",
+            "Utilización del médico: 100.33%\n",
+            "Tiempo promedio de espera: 38.75 minutos\n",
+            "Utilización del médico: 99.47%\n",
+            "Tiempo promedio de espera: 32.75 minutos\n",
+            "Utilización del médico: 98.58%\n",
+            "Tiempo promedio de espera: 31.96 minutos\n",
+            "Utilización del médico: 98.78%\n",
+            "Tiempo promedio de espera: 43.59 minutos\n",
+            "Utilización del médico: 98.36%\n",
+            "Tiempo promedio de espera: 29.56 minutos\n",
+            "Utilización del médico: 99.16%\n",
+            "Tiempo promedio de espera: 47.17 minutos\n",
+            "Utilización del médico: 99.93%\n",
+            "Tiempo promedio de espera: 42.27 minutos\n",
+            "Utilización del médico: 99.40%\n",
+            "Tiempo promedio de espera: 39.82 minutos\n",
+            "Utilización del médico: 99.11%\n"
           ]
         }
       ],
@@ -137,7 +137,13 @@
         "TIEMPO_ATENCION = (6, 12)\n",
         "N_REPLICAS = 30\n",
         "\n",
-        "\n",
+        "# Resultados\n",
+        "tiempos_espera_promedio = []\n",
+        "utilizacion_medico = []\n",
+        "pacientes_no_atendidos = []\n",
+        "pacientes_atendidos = []\n",
+        "detalles_espera = []\n",
+        "detalles_utilizacion = []\n",
         "\n",
         "def paciente(env, nombre, medico, stats):\n",
         "    llegada = env.now\n",
@@ -210,7 +216,7 @@
         "id": "Tk8g4avnDOyg",
         "outputId": "664d6c40-454c-488c-a034-a9900023abc3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -223,6 +229,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Las gráficas muestran los resultados de 30 réplicas de una simulación de atención en un centro de salud con un solo médico:\n",
+        "\n",
+        "* Distribución del tiempo promedio de espera (izquierda): la mayoría de los tiempos promedio se encuentran entre 30 y 45 minutos, con algunos valores extremos llegando hasta los 55 minutos. Esto sugiere una alta variabilidad en los tiempos de espera, posiblemente influenciada por picos de demanda o secuencias de llegadas muy cortas.\n",
+        "\n",
+        "* Distribución de utilización del médico (derecha): el uso del recurso médico es muy alto, oscilando entre el 98 % y el 100 % en la mayoría de las réplicas. Esta alta utilización indica que el médico está constantemente ocupado, lo cual puede explicar los tiempos de espera elevados y sugiere que el sistema opera al límite de su capacidad.\n"
+      ],
+      "metadata": {
+        "id": "QyYhp5rvGsa9"
+      }
     }
   ],
   "metadata": {
